# openbb-fd

./: .codespell.ignore  .codespell.skip  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pyproject.toml
.github/workflows/: linting.yml
integration/: test_fd_api.py  test_fd_python.py
openbb_fd/: __init__.py  router.py
openbb_fd/models/: __init__.py  crypto_search.py  equity_search.py  etf_search.py
openbb_fd/utils/: __init__.py  helpers.py
tests/: test_fd_fetchers.py
