[tool.poetry]
name = "openbb-fd"
version = "1.2.0"
description = "Integration of Jeroen Bouma's Finance Database with OpenBB"
authors = ["piiq <piiq@tinag.ru>"]
readme = "README.md"
packages = [{ include = "openbb_fd" }]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
openbb-core = "^1.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
fd = "openbb_fd:fd_provider"

[tool.ruff]
line-length = 122
target-version = "py39"
